@startuml
title Channel Service - LLD

skinparam shadowing false
skinparam packageStyle rectangle
skinparam classAttributeIconSize 0
skinparam fontName "Helvetica"
skinparam titleFontName "Helvetica"
skinparam legendFontName "Helvetica"
skinparam noteFontName "Helvetica"
skinparam backgroundColor white
skinparam packageBackgroundColor lightblue
skinparam packageBorderColor darkblue
skinparam classBackgroundColor white
skinparam classBorderColor black
skinparam interfaceBackgroundColor lightgreen
skinparam interfaceBorderColor black
skinparam enumBackgroundColor lightyellow
skinparam enumBorderColor black
skinparam arrowColor black
skinparam arrowThickness 2


package "ChannelService" {
class ChannelController {
+POST /channels
+GET /channels/{id}
+PATCH /channels/{id}/branding
+PATCH /channels/{id}/policies
+POST /channels/{id}/roles
+DELETE /channels/{id}/roles/{userId}
}

class ChannelService {
+createChannel(ownerId, name): ChannelDTO
+getChannel(id): ChannelDTO
+updateBranding(id, branding): ChannelDTO
+updatePolicies(id, policies): ChannelDTO
+assignRole(id, userId, role): void
+removeRole(id, userId): void
}

class ChannelRepository {
+save(channel: Channel): void
+findById(id): Optional
+updateBranding(id, branding)
+updatePolicies(id, policies)
+assignRole(id, userId, role)
+removeRole(id, userId)
}

class Channel {
-id: UUID
-ownerId: UUID
-name: String
-branding: Branding
-policies: ChannelPolicies
-roles: Map<UUID, String>
-createdAt: Instant
-updatedAt: Instant
}

class Branding {
-bannerUrl: String
-avatarUrl: String
-colorTheme: String
-description: String
}

class ChannelPolicies {
-contentGuidelines: String
-uploadPermissions: String
-moderationRules: String
}

class OutboxEventPublisher {
+publish(event: DomainEvent)
}

class DomainEvent {
}
}

package "Azure Integrations" {
class CosmosDB
class AzureServiceBusTopic
}

ChannelController --> ChannelService
ChannelService --> ChannelRepository
ChannelService --> OutboxEventPublisher : "ChannelCreated / ChannelUpdated / ChannelRoleChanged"
ChannelRepository ..> CosmosDB
OutboxEventPublisher ..> AzureServiceBusTopic

@enduml
